# saga-cpp-adaptor-ssh

./: CHANGES  INSTALL  Makefile  PACKAGE  README.md  TODO  configure  configure.in
config/: Makefile  config.hpp.in  make.cfg.in  saga.config.ssh.c.mk.in  saga_ssh.m4
scp_file/: CHANGES  Makefile  README  scp_file_adaptor.cpp  scp_file_adaptor.hpp  scp_file_adaptor.ini.in  scp_file_dir.hpp  scp_file_dir_impl.cpp  scp_file_dir_nsdir_impl.cpp  scp_file_dir_nsentry_impl.cpp  scp_file_dir_perm_impl.cpp  scp_file_file.hpp  scp_file_file_impl.cpp  scp_file_file_nsentry_impl.cpp  scp_file_file_perm_impl.cpp
ssh_context/: INFO  Makefile  ssh_context_adaptor.cpp  ssh_context_adaptor.hpp  ssh_context_adaptor.ini.in
ssh_file/: INFO  Makefile  ssh_file_adaptor.cpp  ssh_file_adaptor.hpp  ssh_file_adaptor.ini.in  ssh_file_adaptor_dir.hpp  ssh_file_adaptor_dir_impl.cpp  ssh_file_adaptor_dir_nsdir_impl.cpp  ssh_file_adaptor_dir_nsentry_impl.cpp  ssh_file_adaptor_dir_perm_impl.cpp  ssh_file_adaptor_file.hpp  ssh_file_adaptor_file_impl.cpp  ssh_file_adaptor_file_nsentry_impl.cpp  ssh_file_adaptor_file_perm_impl.cpp  ssh_file_adaptor_sshfs.cpp  ssh_file_adaptor_sshfs.hpp
ssh_file/test/: Makefile
ssh_job/: INFO  Makefile  README  ssh_job.cpp  ssh_job.hpp  ssh_job_adaptor.cpp  ssh_job_adaptor.hpp  ssh_job_adaptor.ini.in  ssh_job_istream.hpp  ssh_job_ostream.hpp  ssh_job_service.cpp  ssh_job_service.hpp  ssh_job_stream.hpp
ssh_job/test/: Makefile  run_adaptor_tests.sh
ssh_suite/: Makefile  ssh_suite.cpp  ssh_suite.hpp
sshfs_file/: .session.vim  INFO  Makefile  README  sshfs_file_adaptor.cpp  sshfs_file_adaptor.hpp  sshfs_file_adaptor.ini.in  sshfs_file_adaptor_dir.hpp  sshfs_file_adaptor_dir_impl.cpp  sshfs_file_adaptor_dir_nsdir_impl.cpp  sshfs_file_adaptor_dir_nsentry_impl.cpp  sshfs_file_adaptor_dir_perm_impl.cpp  sshfs_file_adaptor_file.hpp  sshfs_file_adaptor_file_impl.cpp  sshfs_file_adaptor_file_nsentry_impl.cpp  sshfs_file_adaptor_file_perm_impl.cpp  sshfs_file_adaptor_sshfs.cpp  sshfs_file_adaptor_sshfs.hpp
sshfs_file/test/: README  run_adaptor_tests.sh
